--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "itemslide",
-  "version": "1.0.0",
-  "description": "jQuery plugin for a touch carousel",
+  "version": "1.1.0",
+  "description": "A simple and beautiful JavaScript touch carousel",
   "main": "dist/itemslide.min.js",
   "directories": {
     "example": "examples"
@@ -21,10 +21,6 @@
     "slide",
     "swipe"
   ],
-  "dependencies": {
-    "jquery": "*",
-    "jquery-mousewheel": "*"
-  },
   "author": "Nir Lichtman",
   "license": "MIT",
   "bugs": {
