--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "itemslide",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "homepage": "https://github.com/itemslide/itemslide.github.io",
   "authors": [
-    "Nir Lichtman <nir_lichtman@hotmail.com>"
+    "Nir Lichtman <nir.lich@gmail.com>"
   ],
   "description": "A simple and beautiful JavaScript touch carousel",
   "main": "/dist/itemslide.min.js",
