--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/itemslide/itemslide.github.io/issues"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-uglify": "^0.8.0"
   }
 }
