--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Open the tests folder to test\""
+    "start": "start ./index.html",
+    "build": "browserify src/itemslide.js | uglifyjs > dist/bundle.min.js",
+    "watch": "watchify src/itemslide.js -o dist/bundle.js",
+    "test": "start ./tests/index.html"
   },
   "repository": {
     "type": "git",
@@ -27,10 +30,10 @@
     "url": "https://github.com/itemslide/itemslide.github.io/issues"
   },
   "devDependencies": {
+    "browserify": "^10.1.3",
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "^0.8.0"
-  },
-  "dependencies": {
-    "grunt-contrib-concat": "^0.5.1"
+    "grunt-browserify": "^3.8.0",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
