--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "browserify": "^10.1.3",
     "grunt": "^0.4.5",
+    "grunt-banner": "^0.5.0",
     "grunt-browserify": "^3.8.0",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1"
