update due error in 'bower-main-files' npm module
Add dot as prefix;
`"main": "/dist/itemslide.min.js" => "main": "./dist/itemslide.min.js"`
 ```
    at Object.<anonymous> (...\node_modules\main-bower-files\lib\package.js:132:23)
    at Array.forEach (native)
    at Object.Package.getFiles (...\node_modules\main-bower-files\lib\package.js:130:14)
    at Object.<anonymous> (...\node_modules\main-bower-files\lib\package_collection.js:208:39)
    at Array.forEach (native)
    at Object.PackageCollection.process (...\node_modules\main-bower-files\lib\package_collection.js:207:15)
    at Object.PackageCollection.getFiles (...\node_modules\main-bower-files\lib\package_collection.js:185:21)
    at Object.module.exports (...\node_modules\main-bower-files\lib\index.js:95:28)
    at gulp.task (...\gulpfile.js:131:27)
    at taskWrapper (...\node_modules\undertaker\lib\set-task.js:13:15)
````

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Nir Lichtman <nir.lich@gmail.com>"
   ],
   "description": "A simple and beautiful JavaScript touch carousel",
-  "main": "/dist/itemslide.min.js",
+  "main": "./dist/itemslide.min.js",
   "keywords": [
     "jquery-plugin",
     "carousel",
