--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "itemslide",
-  "version": "1.3.0",
-  "homepage": "https://github.com/itemslide/itemslide.github.io",
+  "version": "1.5.0",
+  "homepage": "https://github.com/nir9/itemslide",
   "authors": [
     "Nir Lichtman <nir.lich@gmail.com>"
   ],
