--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "example": "examples"
   },
   "scripts": {
-    "start": "start ./index.html",
-    "release-build": "echo /* ItemSlide.js - Licensed under the MIT license - itemslide.org/license.html */ > dist/itemslide.min.js && browserify src/itemslide.js | uglifyjs >> dist/itemslide.min.js",
-    "testing-build": "browserify src/itemslide.js > dist/itemslide.js",
-    "watch": "watchify src/itemslide.js -o dist/itemslide.js",
-    "test": "start ./testing/index.html"
+    "build": "webpack build",
+    "watch": "webpack watch"
   },
   "repository": {
     "type": "git",
@@ -32,8 +29,7 @@
     "url": "https://github.com/nir9/itemslide/issues"
   },
   "devDependencies": {
-    "browserify": "^16.5.1",
-    "uglify-js": "^3.10.0",
-    "watchify": "^3.11.1"
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2"
   }
 }
