Remove dependence on webpack

--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,13 @@
 {
   "name": "itemslide",
-  "version": "1.6.0",
+  "version": "2.0.0",
   "homepage": "https://github.com/nir9/itemslide",
   "authors": [
     "Nir Lichtman <nir.lich@gmail.com>"
   ],
   "description": "A simple and beautiful JavaScript touch carousel",
-  "main": "./dist/itemslide.min.js",
+  "main": "./itemslide.js",
   "keywords": [
-    "jquery-plugin",
     "carousel",
     "touch",
     "mobile",
